fixed background on mobile, minor style changes

--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,10 @@
   --button-color: 0, 0, 0;
   --button-text: lightblue;
   --border-color: rgb(0, 38, 255);
-
+  --background-gradient: rgba(255, 255, 255, 0.2);
   width: 100vw;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
   text-align: center;
-  color: var(--color-text);
-  background: var(--color-background);
-  background-attachment: fixed;
 }
 
 #root.dark {
@@ -25,6 +21,28 @@
   --button-color: 255, 255, 255;
   --button-text: black;
   --border-color: lightblue;
+  --background-gradient: rgba(0, 0, 0, 0.2);
+}
+
+.background {
+  background: var(--color-background);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-family: IBM Plex Sans;
+  padding: 2rem;
+  color: var(--color-text);
 }
 
 .alt-text {
@@ -39,25 +57,25 @@
 }
 
 .theme-button {
-  background-color: rgba(var(--button-color), 0.5);
+  background-color: rgba(var(--button-color), 0.6);
   font-size: 8pt;
+  font-weight: 600;
   font-family: IBM Plex Sans;
   color: var(--button-text);
-  border-radius: 1px;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 1px -1px 3px -1px var(--border-color), -1px 1px 3px -1px var(--alt-color-text);
   padding: 2px;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  font-family: IBM Plex Sans;
+.theme-button:active {
+  transform: translateY(4px);
 }
 
-.app a:link {
-  color: var(--alt-color-text);}
+.app a {
+  font-weight: 600;
+  color: var(--alt-color-text);
+}
 
 .app a:visited {
   color: var(--color-text);
@@ -75,8 +93,9 @@
 
 .tag-line {
   margin: 0;
-  font-size: 3vmin;
+  font-size: 3.5vmin;
   font-family: Tillana;
+  font-weight: 700;
 }
 
 .contact-info {
@@ -133,7 +152,7 @@
   flex-direction: column;
   width: 98%;
   border-radius: 10px;
-  background: #eeeeee25;
+  background: var(--background-gradient);
   box-shadow: 2px -2px 5px -2px var(--border-color), -2px 2px 5px -2px var(--alt-color-text);
   padding: .5em;
 }
@@ -151,7 +170,7 @@
   border: 1px solid var(--button-color);
   box-shadow: 1px -1px 2px -1px var(--border-color), -1px 1px 2px -1px var(--alt-color-text);
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.2)
+  background-color: var(--background-gradient);
 }
 
 .project p {
@@ -216,52 +235,52 @@
   font-size: x-small;
 }
 
-.animate {
-  animation-duration: 0.75s;
-  animation-delay: 0.5s;
-  animation-name: animate-fade;
-  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
-  animation-fill-mode: backwards;
-}
-
-/* Glow In */
-.animate.glow {
-  animation-name: animate-glow;
-  animation-timing-function: ease;
-}
-
-@keyframes animate-glow {
-  0% {
-    opacity: 0;
-    filter: brightness(3) saturate(3);
-    transform: scale(0.8, 0.8);
+@media (prefers-reduced-motion: no-preference) {
+  .animate {
+    animation-duration: 0.75s;
+    animation-delay: 0.5s;
+    animation-name: animate-fade;
+    animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
+    animation-fill-mode: backwards;
   }
 
-  100% {
-    opacity: 1;
-    filter: brightness(1) saturate(1);
-    transform: scale(1, 1);
+  /* Glow In */
+  .animate.glow {
+    animation-name: animate-glow;
+    animation-timing-function: ease;
+  }
+
+  @keyframes animate-glow {
+    0% {
+      opacity: 0;
+      filter: brightness(3) saturate(3);
+      transform: scale(0.8, 0.8);
+    }
+
+    100% {
+      opacity: 1;
+      filter: brightness(1) saturate(1);
+      transform: scale(1, 1);
+    }
+  }
+
+  .delay-1 {
+    animation-delay: 0.1s;
+  }
+
+  .delay-2 {
+    animation-delay: 0.2s;
+  }
+
+  .delay-3 {
+    animation-delay: 0.3s;
+  }
+
+  .delay-4 {
+    animation-delay: 0.4s;
+  }
+
+  .delay-5 {
+    animation-delay: 0.5s;
   }
 }
-
-.delay-1 {
-  animation-delay: 0.1s;
-}
-
-.delay-2 {
-  animation-delay: 0.2s;
-}
-
-.delay-3 {
-  animation-delay: 0.3s;
-}
-
-.delay-4 {
-  animation-delay: 0.4s;
-}
-
-.delay-5 {
-  animation-delay: 0.5s;
-}
-
-@media (prefers-reduced-motion: no-preference) {}
